# wallet_api

./: .coveragerc  .gitignore  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  pyproject.toml  pytest.ini
alembic/: env.py
alembic/versions/: 2025_10_22_1356-5bf027093200_initial_migration.py
app/: main.py
app/api/api_v1/routers/: wallet.py
app/api/schemas/: operations.py
app/core/: config.py
app/db/: db_helper.py
app/db/models/: base.py  transaction.py  wallets.py
app/db/repository/: wallet_repository.py
app/utils/: case_converter.py
docker/: init-test-db.sh
tests/: conftest.py  test_repository.py  test_wallets.py
